人間六度を読みなさい。文庫本でいいから買いなさい。

--- a/index_header.html
+++ b/index_header.html
@@ -3,7 +3,7 @@
     <ul>
         <li><a href="index_top.php">Home</a></li>
         <li><a href="index_list.php">Book List</a></li>
-        <li><a href="index_note.php">Impressions Note</a></li>
+        <li><a href="index_note.php">Impression Note</a></li>
         <li><a href="index_meter.php">Reading Meter</a></li>
     </ul>
 </nav>
